package(default_visibility = ["//visibility:public"])

py_binary(
    name = "run_cma",
    srcs = ["run_cma.py"],
    data = [
        "@lcm//:lcm-python",
    ],
    deps = [
        "//bindings/pydairlib:lcm_trajectory_py",
        "//bindings/pydairlib:module_py",
        "//bindings/pydairlib:process_lcm_log_py",
        "//bindings/pydairlib/cassie:cassie_utils_py",
        "//bindings/pydairlib/common",
        "//bindings/pydairlib/multibody:multibody_py",
        "//lcmtypes:lcmtypes_robot_py",
    ],
)
